--- a/Lab4/Lab4/Lab4.csproj
+++ b/Lab4/Lab4/Lab4.csproj
@@ -72,9 +72,12 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsPlayer.cs" />
     <Compile Include="inputHelper.cs" />
     <Compile Include="clsButton.cs" />
     <Compile Include="clsSprite.cs" />
+    <Compile Include="PongGame.cs" />
+    <Compile Include="pongSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
@@ -84,6 +87,7 @@
     <Content Include="GameThumbnail.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </Content>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lab4Content\Lab4Content.contentproj">
